[gd_scene format=3 uid="uid://dsaa86o8uiu01"]

[ext_resource type="StyleBox" uid="uid://bcf282gwt1lbo" path="res://login/lineedit_focus.tres" id="1_5otam"]
[ext_resource type="Script" uid="uid://chv6oqm4hklw4" path="res://login/manager.gd" id="1_t3q6d"]
[ext_resource type="StyleBox" uid="uid://ddhw3olsqb12g" path="res://login/lineedit_default.tres" id="2_2ykpf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t3q6d"]
bg_color = Color(0.18039216, 0.18039216, 0.18039216, 1)

[sub_resource type="Theme" id="Theme_by2ci"]
LineEdit/colors/font_color = Color(1, 1, 1, 1)
LineEdit/font_sizes/font_size = 20
LineEdit/styles/focus = ExtResource("1_5otam")
LineEdit/styles/normal = ExtResource("2_2ykpf")
Panel/styles/panel = SubResource("StyleBoxFlat_t3q6d")

[node name="Login" type="Control" unique_id=327356672]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_by2ci")

[node name="Panel" type="Panel" parent="." unique_id=885048554]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LoginManager" type="Node" parent="." unique_id=1369086299]
script = ExtResource("1_t3q6d")

[node name="LoginBox" type="VBoxContainer" parent="." unique_id=933807387]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameField" type="LineEdit" parent="LoginBox" unique_id=992255177]
layout_mode = 2
placeholder_text = "Slot Name"

[node name="IPField" type="LineEdit" parent="LoginBox" unique_id=1564336284]
layout_mode = 2
text = "archipelago.gg"
placeholder_text = "IP Address"

[node name="PortField" type="LineEdit" parent="LoginBox" unique_id=1099176001]
layout_mode = 2
placeholder_text = "Port"

[node name="PasswordField" type="LineEdit" parent="LoginBox" unique_id=1003066086]
layout_mode = 2
placeholder_text = "Password"
secret = true

[node name="AutoClickButton" type="CheckButton" parent="LoginBox" unique_id=355507145]
layout_mode = 2
text = "Automatic Number Clicking"

[node name="Center" type="CenterContainer" parent="LoginBox" unique_id=443740068]
layout_mode = 2

[node name="ConnectButton" type="Button" parent="LoginBox/Center" unique_id=1161150009]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Connect"

[connection signal="pressed" from="LoginBox/Center/ConnectButton" to="LoginManager" method="_on_connect_button_pressed"]
